Fix spacing

--- a/frontend/styles.css
+++ b/frontend/styles.css
@@ -30,7 +30,7 @@
   align-items: center;
   justify-content: flex-end;
   color: gray;
-  margin: 0 15px 20px 0;
+  margin: 0 15px 15px 0;
 }
 
 .pulse-feedback-label {
